# hw2-spy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
hw2_spy/: __main__.py  hw2_spy_config.py  hw2_spy_data.py  hw2_spy_tui.py  hw2_spy_tui.tcss
hw2_spy/samples/: csr_designations.json  game-objects.json  get_samples.sh  leaders.json  match_events.json  match_result.json  player_match_history.json  player_playlist_ratings.json  player_season_stats_summary.json  player_stats_summary.json  player_xps.json  playlists.json  spartan-ranks.json
