[tool.poetry]
name = "hw2-spy"
version = "1.1.0"
description = "Show curated information about the given Halo Wars 2 players, including a brief overview of their most recent matches' first 12 minutes, by accessing the public API available at https://developer.haloapi.com (a free subscription key is needed)."
authors = ["Josep M Homs <jmhoms@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "hw2_spy" }]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.38.0"
urllib3 = "^2.0.6"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.19.14"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"
textual-dev = "^1.0.1"
ruff = "^0.0.289"
types-toml = "^0.10.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hw2-spy = "hw2-spy.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["ALL"]
# select = ["A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
ignore = [
    "ANN",    # Type hints related, let mypy handle these.
    "COM812", # "Trailing comma missing". If black is happy, I'm happy.
    "E501",   # "Line too long". If black is happy, I'm happy.
    # "EM101",    # "Exception must not use a string literal, assign to variable first"
    # "EM102",    # "Exception must not use an f-string literal, assign to variable first"
    "PTH", # User Pathlib stuff over os.*. Should migrate to Pathlib at some point.
    # "RET504",   # "Unnecessary variable assignment before `return` statement"
    # "S101",     # "Use of `assert` detected"
    # "SIM108",   # "Use ternary operator ...". Ternary is harmful for readability in some cases.
    # "TRY003",   # "Avoid specifying long messages outside the exception class"
]

[tool.ruff.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
namespace-packages = true
exclude = ["cache", "samples", "docs", "test"]
modules = [
    "__main__.py",
    "hw2_spy_config.py",
    "hw2_spy_data.py",
    "hw2_spy_tui.py",
]

[[tool.mypy.overrides]]
module = "nontypedmodule.*"
ignore_missing_imports = true
